# marketinghelper

./: .gitignore  LICENSE  README.md  README_DEV.md  pyproject.toml  requirements.txt  setup.py  start_all.sh  start_dev.sh  小红书助手.md  意图识别与Planner示例.md  技术调研.md  技术难点与解决方案.md  需求分析与Planner技术调研.md
api/: __init__.py  auth_db.py  main.py
src/xhs_assistant/: __init__.py
src/xhs_assistant/agents/: __init__.py  account_strategy.py  ads_planning.py  content_eval.py  content_generation.py  registry.py  topic_planning.py
src/xhs_assistant/fulfillability/: __init__.py  schema.py  service.py
src/xhs_assistant/intent/: __init__.py  schema.py  service.py
src/xhs_assistant/planner/: __init__.py  graph.py  schema.py
src/xhs_assistant/shared/: __init__.py  config.py  state.py
src/xhs_assistant/verifier/: __init__.py  service.py
tests/: test_intent_schema.py  test_planner_graph.py
webui/: index.html  package-lock.json  package.json  vite.config.ts
webui/src/: App.tsx  index.css
webui/src/api/: client.ts
webui/src/components/account/: AccountPage.tsx  index.ts
webui/src/components/auth/: LoginPage.tsx  RegisterPage.tsx
webui/src/components/home/: CapabilityCard.tsx  CapabilityGrid.tsx  CentralInput.tsx  Hero.tsx  HomePage.tsx  Pills.tsx  index.ts
webui/src/components/layout/: Footer.tsx  Header.tsx
webui/src/components/session/: SessionPage.tsx  SessionResult.tsx  index.ts
webui/src/contexts/: AuthContext.tsx
webui/src/data/: capabilityCards.ts
webui/src/stores/: accountContext.ts  authStore.ts
webui/src/types/: intent.ts
(+3 files in other folders)
